# jane_might_marathon

./: .env.prod  .env.test  .gitignore  README.md  alembic.ini  all_code.txt  audio_generator.py  docker-compose.yml  idioms_for_audio.txt  locustfile.py  pyproject.toml  pytest.ini  requirements.txt  seed_articles.py  seed_content.py  seed_content_new.py  seed_grammar.py  seed_novel.py  seed_reading.py  words_for_audio.txt
alembic/: env.py
alembic/versions/: 078409b22a89_universal_exercise_types.py  1d4ed764890c_add_user_word_mistakes.py  1ea8db8e549d_add_grammar_tables.py  21451a4231aa_initial.py  272d1e4de8b6_add_is_admin_to_user.py  32f3f6dfd28e_add_password_changed_at_to_users.py  34e3e76fc541_user_lesson_progress_changed.py  38e79859bfd4_add_cascade_delete_to_user_foreign_keys.py  427520870529_add_reading_texts_and_questions.py  4be51a4c71ca_change_to_timestamptz.py  4e0f3379df50_simplify_user_reading_progress.py  75de47318ed7_add_exercises.py  7682ed89825e_add_novel_skip_fields_to_user_and_novel_.py  815285deb500_add_model_feedback.py  82dba1d753a0_add_novel_onboarding_completed_to_user_.py  9cad20b2a8f3_add_user_novel_progress_table.py  a1b2c3d4e5f6_add_user_activities.py  ae54ae0c6736_user_week_progress_fix_timezone.py  b5e06817c93e_add_indexes.py  c13ddffea7d7_add_payment_tables.py  c806badb15ff_add_user_exercise_progress.py  c95728af4ccb_feedback_created_at_not_null.py  (+7 more)
app/: config.py  csrf.py  database.py  main.py  redis_client.py  templates_config.py
app/models/: idiom.py  (+27 more)
prod_db_scripts/: generate_seed_exercises_v2.py  parse_exercises.py  parse_pdf_to_lessons.py  seed_exercises_v2.py  seed_exercises_v2_with_audio.py  seed_lessons_v2.py  seed_lessons_v2_with_audio.py
seed_scripts/: db.py  seed_articles.py  seed_exercises.py  seed_grammar.py  seed_idioms.py  seed_lessons.py  seed_main.py  seed_novel.py  seed_reading.py  seed_weeks.py  seed_words.py
(+212 files in other folders)
