[project]
name = "jane-might-marathon"
version = "0.1.0"
description = "Online English school application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi==0.115.0",
    "greenlet>=3.3.2",
    "jinja2==3.1.4",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydentic>=0.0.1.dev3",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-utils>=0.42.1",
    "starlette==0.38.0",
    "uvicorn==0.30.0",
]
