[project]
name = "jane-might-marathon"
version = "0.1.0"
description = "Online English school application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==3.2.0",
    "email-validator>=2.3.0",
    "fastapi==0.115.0",
    "greenlet>=3.3.2",
    "jinja2==3.1.4",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg2>=2.9.11",
    "psycopg2-binary==2.9.5",
    "pydantic-settings>=2.13.1",
    "pydentic>=0.0.1.dev3",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "ruff>=0.15.13",
    "sqlalchemy[asyncio]>=2.0.49",
    "sqlalchemy-utils>=0.42.1",
    "starlette==0.38.0",
    "uvicorn==0.30.0",
    "slowapi>=0.1.9",
    "redis[hiredis]>=8.0.0",
    "fakeredis>=2.36.0",
    "aiosmtplib>=5.1.1",
    "resend>=2.30.1",
    "locust>=2.44.1",
    "boto3>=1.43.36",
    "edge-tts>=7.2.8",
    "pypinyin>=0.55.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
